플러터에서 서버에게 데이터 요청하는 법

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.study_flutter_2">
-   <application
+    <!--인터넷 사용 허가 (안드로이드만)-->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <application
         android:label="study_flutter_2"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
