--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,11 @@ dependencies:
   image_picker: ^0.8.4+4
   shared_preferences: ^2.0.11
   provider: ^6.0.1
+  flutter_local_notifications: ^9.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  fluttertoast: ^8.1.2
 
 dev_dependencies:
   flutter_test:
